# technical-interview-11-11

./: .env.example  .pre-commit-config.yaml  ALEMBIC_FIX.md  DEMO_DOCKER.md  PR15_INFRA_SUMMARY.md  README.md  alembic.ini  conftest.py  dev.db  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/app/: config.py  main.py  ratelimit.py
backend/app/adapters/: __init__.py  fixtures.py  provenance.py  weather.py
backend/app/api/: __init__.py  auth.py
backend/app/citations/: extract.py
backend/app/db/: __init__.py  agent_runs.py  context.py  engine.py  inmemory.py  models.py  queries.py  repositories.py  run_events.py  seed_dev.py  sql_repositories.py
backend/app/docs/: chunker.py  ingest.py  retriever.py
backend/app/features/: __init__.py  mapping.py
backend/app/fixtures/: attractions.json  flights.json  fx_rates.json  (+1 more)
docs/: ARCHITECTURE_AUDIT.md  AUDIT_RAG_MCP_STRUCTURING.md  DEV_SEEDING_FIX.md  PR1_AUDIT.md  PR3_AUDIT.md  PR3_NOTES.md  PR4A_README.md  PR4B_README.md  SPEC.md  spec_v2_delta.md
docs/schemas/: ItineraryV1.schema.json  PlanV1.schema.json
eval/: runner.py  scenarios.yaml
scripts/: dev_migrate.sh  dev_seed.sh  export_schemas.py  start_ui.sh
tests/: conftest.py
tests/eval/: test_eval_runner.py
tests/integration/: __init__.py  test_docs_ingest.py  test_docs_retriever.py  test_docs_routes.py  test_health_metrics.py  test_idempotency.py  test_orchestration.py  test_postgres_jsonb.py  test_qa_plan_agent_run_creation.py  test_qa_plan_retrieval.py  test_qa_plan_route.py  test_ratelimit.py  test_run_thread_route.py  test_run_threads.py  test_runs_api.py  test_seed_dev.py  test_tenancy.py  test_what_if_route.py
tests/unit/: test_answer_mapping.py  test_answer_models.py  test_auth.py  test_citations_extract.py  test_constants_single_source.py  test_contracts_validators.py  test_docs_chunker.py  test_docs_node.py  test_feature_mapping.py  test_fixture_adapters.py  test_jsonschema_roundtrip.py  test_llm_client.py  test_nonoverlap_property.py  test_planner_node.py  test_qa_deserialization.py  test_selector_node.py  test_synth_node.py  test_tool_executor.py  test_tool_runner.py  test_tools_used_mapping.py  test_tri_state_serialization.py  test_ui_helpers.py  test_verifiers_budget_prefs.py  test_verifiers_feasibility_weather.py  test_weather_adapter.py  test_what_if_derivation.py  test_what_if_graph_integration.py
ui/: Dockerfile  __init__.py  app.py  helpers.py
(+43 files in other folders)
